<resources>
    <!--Akashdeep Singh n01458137 0NC-->
    <string name="app_name">ezpark</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting_screeen_show">Setting Screeen</string>
    <string name="title_information">Information</string>
    <string name="title_payment">Payment</string>
    <string name="customer_name_payment">Customer Name:</string>
    <string name="pay_info">Your Payment Infomation</string>
    <string name="pay_fullname">Your full name:</string>
    <string name="pay_cardnumber">Card Number</string>
    <string name="pay_date">Expiration Date</string>
    <string name="cvv">CVV</string>
    <string name="pay_button">Pay</string>
    <string name="pay_savecarpermission">You want to save card for future use</string>
    <string name="info">Personal Information</string>
    <string name="info_name">Full Name</string>
    <string name="info_email">Email address</string>
    <string name="info_phone">Phone No.</string>
    <string name="car_plateno">Plate Number</string>
    <string name="car_make">Make</string>
    <string name="car_model">Model</string>
    <string name="time_from">From</string>
    <string name="time_to">To</string>
    <string name="time">Stay Time</string>
    <string name="proceed_to_pay">Proceed to Pay</string>
    <string name="home_welcome">Welcome</string>
    <string name="home_below">Click on the icon below\nfor booking</string>
    <string name="setting_potrait">  Potrait Mode</string>
    <string name="settings_dark">  Dark Mode</string>
    <string name="settings_Location"> Location</string>
    <string name="settings_access">  Access to photos</string>
    <string name="home_bookbtn">Book</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="recipt_was_not_saved">Recipt was not saved</string>
    <string name="go_to_confirmation_tab">Click here to get the confirmation</string>
    <string name="log_in">Log in</string>
    <string name="remember_me">Remember Me</string>
    <string name="dont_have_account">Dont have account...</string>
    <string name="register_here">Register Here</string>
    <string name="password">  Password</string>
    <string name="create_new_account">  Create new Account</string>
    <string name="verify_password">  Verify Password</string>
    <string name="signuppassword">  Password</string>
    <string name="signupphonenumber">  Phone Number</string>
    <string name="Notification" translatable="false">  Notification</string>
    <string name="signupemail">  Email Address</string>
    <string name="signinname" translatable="false">  Name</string>
    <string name="sign_up">  Sign Up</string>
    <string name="signupusername">Username</string>
    <string name="map">Map</string>
    <string-array name="spots">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>