<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white"
    tools:context=".LoginScreen">


    <EditText
        android:id="@+id/email"
        android:layout_width="380dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="360dp"
        android:background="@drawable/login"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:ems="10"
        android:hint="Username "
        android:inputType="textPersonName"
        android:textColor="@color/blue"
        android:textColorHint="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="380dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="412dp"
        android:background="@drawable/login"
        android:drawableLeft="@drawable/lock"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/blue"
        android:textColor="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/register"
        android:layout_width="380dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="648dp"
        android:background="@drawable/login_button"
        android:gravity="center"
        android:text="@string/register_here"

        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="648dp"
        android:text="@string/dont_have_account"
        android:textColor="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/rememberme"
        android:layout_width="128dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="452dp"
        android:text="@string/remember_me"
        android:textColor="@color/blue"
        android:textSize="13dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/logbutton"
        android:layout_width="380dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="508dp"
        android:background="@drawable/login_button"
        android:text="@string/log_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="292dp"
        android:layout_height="265dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="69dp"
        android:src="@drawable/loginlogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_btn"
        android:layout_width="48dp"
        android:layout_height="40dp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="576dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>