<?xml version="1.0" encoding="utf-8"?>
<!--Akashdeep Singh n01458137 0NC-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.payment.PaymentFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="375dp"
        android:layout_height="330dp"
        android:layout_marginBottom="372dp"
        android:src="@drawable/pay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="288dp"
        android:fontFamily="@font/avenue"
        android:text="@string/pay_info"
        android:textColor="@color/black"
        android:textSize="25dp"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginStart="260dp"
        android:layout_marginTop="424dp"
        android:src="@drawable/visa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="89dp"
        android:layout_height="202dp"
        android:layout_marginStart="344dp"
        android:layout_marginTop="344dp"
        android:src="@drawable/interac"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="65dp"
        android:layout_height="177dp"
        android:layout_marginStart="304dp"
        android:layout_marginTop="356dp"
        android:src="@drawable/mastercard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="332dp"
        android:fontFamily="@font/avenue"
        android:textColor="@color/black"
        android:text="@string/pay_fullname"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="263dp"
        android:layout_height="42dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="356dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="400dp"
        android:fontFamily="@font/avenue"
        android:textColor="@color/black"
        android:text="@string/pay_cardnumber"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="241dp"
        android:layout_height="44dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="428dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="472dp"
        android:textColor="@color/black"
        android:fontFamily="@font/avenue"
        android:text="@string/pay_date"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="147dp"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="496dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="216dp"
        android:layout_marginTop="472dp"
        android:fontFamily="@font/avenue"
        android:textColor="@color/black"
        android:text="@string/cvv"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="141dp"
        android:layout_height="54dp"
        android:layout_marginStart="216dp"
        android:layout_marginTop="492dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="546dp"
        android:textColor="@color/black"
        android:fontFamily="@font/avenue"
        android:text="@string/pay_savecarpermission"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/pay"
        android:layout_width="337dp"
        android:layout_height="55dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="610dp"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:text="@string/pay_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>